Appointment booking done

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -3,7 +3,7 @@
 
 @theme {
   /* Add your primary color */
-  --color-primary: #5f6fff;
+  --color-primary: #7a5cff;
 
   /* Optional: Create a shade scale for more flexibility
   --color-primary-50: #eef0ff;
